tests/negative/gold/paren_test.gold
tests/negative/paren_test.toit:6:6: error: Incomplete expression
 (1 +
     ^
tests/negative/paren_test.toit:6:2: error: Missing closing ')'
 (1 +
 ^~~~
tests/negative/paren_test.toit:10:2: error: Missing closing ')'
 (1 + 3
 ^~~~~~
tests/negative/paren_test.toit:7:2: error: Unresolved identifier: 'unresolved'
 unresolved
 ^~~~~~~~~~
tests/negative/paren_test.toit:11:2: error: Unresolved identifier: 'unresolved'
 unresolved
 ^~~~~~~~~~
Compilation failed.
